fixed collapsable menu

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,3 +21,67 @@ body {
     height: 150px;
     margin: 10px 15px 10px 0;
 }
+
+.navbar-brand {
+    padding-top: 25px;
+}
+
+/*Restaurant name */
+.navbar-brand h1 {
+    font-family: 'Lora', serif;
+    color: #557c3e;
+    font-size: 1.5em;
+    text-transform: uppercase;
+    font-weight: bold;
+    text-shadow: 1px 1px 1px #222;
+    margin-top: 0;
+    line-height: .75;
+}
+
+.navbar-brand a:hover,
+.navbar-brand a:focus {
+    text-decoration: none;
+}
+
+/* Kosher cert */
+.navbar-brand p {
+    color: #000;
+}
+
+.navbar-brand span {
+    text-transform: uppercase;
+}
+
+#nav-list {
+    margin-top: 10px;
+}
+
+#nav-list a {
+    color: #951c49;
+    text-align: center;
+}
+
+#nav-list a:hover {
+    background: #e7e7e7;
+}
+
+#nav-list a span {
+    font-size: 1.8em;
+}
+
+#phone {
+    margin-top: 5px;
+}
+
+/* Phone number */
+#phone a {
+    text-align: right;
+    padding-bottom: 0;
+}
+
+/* We deliver */
+#phone div {
+    color: #557c3e;
+    text-align: right;
+    padding-right: 15px;
+}
